update testing framework

--- a/test-databases/Cargo.toml
+++ b/test-databases/Cargo.toml
@@ -11,3 +11,4 @@ insta = {version = "1.14.0", features = ["colors", "glob"]}
 rusqlite = { version = "0.27.0", features = ["bundled"] }
 postgres = "0.19.3"
 chrono = "0.4.19"
+duckdb = "0.4.0"
